samples/_failures_safe/1761604050_eb55ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_07f37710.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_07f37710.c:176:19: error: expected ‘;’ at end of input
  176 |         visited[i]
      |                   ^
      |                   ;
./samples/SAFE/__tmp_07f37710.c:176:9: error: expected declaration or statement at end of input
  176 |         visited[i]
      |         ^~~~~~~
./samples/SAFE/__tmp_07f37710.c:176:9: error: expected declaration or statement at end of input
